sfdx-source/force-app/main/default/objects/Walk_Pre_Sales_Adjustment__c/Walk_Pre_Sales_Adjustment__c.object-meta.xml
<CustomObject>
    <description>This object will be solely used by Pre-Sales team to adjust Pre-Sales actuals in order for Walk Dashboard to displace the correct number.</description>
    <label>Walk Pre-Sales Adjustment</label>
    <nameField>
        <displayFormat>PS{0000}</displayFormat>
        <label>Walk Pre-Sales Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Walk Pre-Sales Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>