sfdx-source/force-app/main/default/objects/Walk_Pre_Sales_Adjustment__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Account Id from Salesforce</description>
    <label>Account Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>