sfdx-source/force-app/main/default/objects/Walk_Pre_Sales_Adjustment__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Opportunity Id from Salesforce</description>
    <label>Opportunity Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>