sfdx-source/force-app/main/default/objects/Walk_Pre_Sales_Adjustment__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>opportunity owner from Salesforce</description>
    <label>Opportunity Owner</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>