sfdx-source/force-app/main/default/objects/Walk_Pre_Sales_Adjustment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>