sfdx-source/force-app/main/default/objects/Walk_Pre_Sales_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Country__c</columns>
    <columns>Cohort__c</columns>
    <columns>Product__c</columns>
    <columns>Account_Id__c</columns>
    <columns>Opportunity_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>